.provarCaches/00D6C0000000xA6UAI/objects/redwing__Task__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Add_training_parameters_to_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will pass context parameters to the External Resource URL. (e.g. https://someurl.com/?aid=ASSIGNMENT_ID&amp;tid=TPLAN_ID)</inlineHelpText>
        <label>Add training parameters to URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Description_RTA__c</fullName>
        <inlineHelpText>Use this field to provide an additional description for the task</inlineHelpText>
        <label>Additional Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <inlineHelpText>Description for this task</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you do not want users to provide comments for this task</inlineHelpText>
        <label>Disable Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Disable_Undo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you do not want users to re-open a task marked as completed</inlineHelpText>
        <label>Disable Undo for Completed Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Image_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will require users to upload an image in order to complete the task</inlineHelpText>
        <label>Enable Image Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Ratings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Ratings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Video_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will require users to upload a video in order to complete the task</inlineHelpText>
        <label>Enable Video Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__External_Resource_Name__c</fullName>
        <inlineHelpText>&quot;Friendly&quot; name for the External Resource URL. If blank, the External Resource URL will be displayed</inlineHelpText>
        <label>External Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__External_Resource_Target__c</fullName>
        <inlineHelpText>Target window for displaying the External Resource URL. &quot;blank&quot; will open a new tab/window and &quot;self&quot; will use the current tab/window</inlineHelpText>
        <label>External Resource Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>blank</fullName>
                    <default>true</default>
                    <label>blank</label>
                </value>
                <value>
                    <fullName>self</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__External_Resource_URL__c</fullName>
        <inlineHelpText>URL to an external resource that will guide users on how to complete the task</inlineHelpText>
        <label>External Resource URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Max_Attempts__c</fullName>
        <inlineHelpText>Maximum number of attempts to submit a task</inlineHelpText>
        <label>Max Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Passing_Rating__c</fullName>
        <inlineHelpText>Number between 0 and 100 that will determine the minimum percentage of the ratings score for approval</inlineHelpText>
        <label>Passing Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Requires_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you want to require Manager&apos;s approval for completing the task. This option will use the standard Manager field in the User object</inlineHelpText>
        <label>Requires Manager Approval to Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Task</label>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>